--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,34 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<html land="no">
+    <head>
+    <meta charset="utf-8"/>
+    <title>Kartverkskart</title>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="crossorigin=""></script>
+        <style>
+            #map {height: 800px;
+                width: 600px }
+        </style>
+    </head>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <body>
 
-</body>
+        <h1>Kart</h1>
+
+        <div id="map"></div>
+
+        <script type="text/javascript">
+            var map = L.map('map').setView([60.14,10.25],9);
+
+            <!-- Dette eksempelet her gjelder for topo tjenesten, må endre tileLayer URL for å benytte annen tjeneste -->
+            L.tileLayer('https://cache.kartverket.no/v1/wmts/1.0.0/topo/default/webmercator/{z}/{y}/{x}.png', {
+            maxZoom: 18,
+            attribution: '&copy; <a href="http://www.kartverket.no/">Kartverket</a>'
+
+            }).addTo(map);
+
+        </script>
+    </body>
+
 </html>
