--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
 
         <div id="map"></div>
 
+        <a href="/.auth/login/aad">Login</a>
+
         <script type="text/javascript">
             var map = L.map('map').setView([60.14,10.25],9);
 
