--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html land="no">
     <head>
@@ -14,22 +13,45 @@
 
     <body>
 
-        <h1>Kart</h1>
+        <div id="app">
+            <h1>Kart</h1>
+            <div id="map"></div>
+            <div v-if="!user">
+                <a href="/.auth/login/aad">Login</a>
+            </div>
+            <div v-else>
+                <span>Hei, {{ user.userDetails }}</span>
+                <a href="/.auth/logout">Logout</a>
+            </div>
+        </div>
 
-        <div id="map"></div>
-
-        <a href="/.auth/login/aad">Login</a>
-
+        <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
         <script type="text/javascript">
-            var map = L.map('map').setView([60.14,10.25],9);
-
-            <!-- Dette eksempelet her gjelder for topo tjenesten, må endre tileLayer URL for å benytte annen tjeneste -->
-            L.tileLayer('https://cache.kartverket.no/v1/wmts/1.0.0/topo/default/webmercator/{z}/{y}/{x}.png', {
-            maxZoom: 18,
-            attribution: '&copy; <a href="http://www.kartverket.no/">Kartverket</a>'
-
-            }).addTo(map);
-
+        const { createApp, ref, onMounted } = Vue;
+        createApp({
+            setup() {
+                const user = ref(null);
+                onMounted(async () => {
+                    // Initialize map
+                    var map = L.map('map').setView([60.14,10.25],9);
+                    L.tileLayer('https://cache.kartverket.no/v1/wmts/1.0.0/topo/default/webmercator/{z}/{y}/{x}.png', {
+                        maxZoom: 18,
+                        attribution: '&copy; <a href="http://www.kartverket.no/">Kartverket</a>'
+                    }).addTo(map);
+                    // Check authentication
+                    try {
+                        const res = await fetch('/.auth/me');
+                        const data = await res.json();
+                        if (data.clientPrincipal) {
+                            user.value = data.clientPrincipal;
+                        }
+                    } catch (e) {
+                        // Ignore errors
+                    }
+                });
+                return { user };
+            }
+        }).mount('#app');
         </script>
     </body>
 
